--- a/CSharp/CollegeRecommendation/packages.config
+++ b/CSharp/CollegeRecommendation/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
+  <package id="EmguCV" version="3.1.0.1" targetFramework="net46" />
   <package id="Flurl" version="2.5.0" targetFramework="net46" />
   <package id="Flurl.Http" version="1.2.0" targetFramework="net46" />
   <package id="Microsoft.AdaptiveCards" version="0.5.1" targetFramework="net46" />
@@ -15,5 +16,8 @@
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.2" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="OpenTK" version="1.1.2225.0" targetFramework="net46" />
+  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net46" />
+  <package id="ZedGraph" version="5.1.5" targetFramework="net46" />
 </packages>
